<resources>
    <string name="app_name" translatable="false">bestfood</string>
    <string name="title_activity_menu_app" translatable="false">MenuAppActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="username" translatable="false">UserName</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="regiter" translatable="false">Dont have Account Register </string>
    <string name="registerbtn" translatable="false">Register</string>
    <string name="dessert" translatable="false">Dessert</string>
    <string name="price" translatable="false">Price : </string>
    <string name="number" translatable="false">Number:</string>
    <string name="reservation" translatable="false">Reservation</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="pizza" translatable="false">Pizza</string>
    <string name="salad" translatable="false">Salad</string>
    <string name="seafood" translatable="false">Sea Food</string>
    <string name="contactus" translatable="false">Contact Us</string>
    <string name="openhours" translatable="false">Open Hours</string>
    <string name="monday" translatable="false">Monday</string>
    <string name="tuesday" translatable="false">Tuesday</string>
    <string name="wednesday" translatable="false">Wednesday</string>
    <string name="thursday" translatable="false">Thursday</string>
    <string name="friday" translatable="false">Friday</string>
    <string name="getintouch" translatable="false">Get in touch</string>
    <string name="callus" translatable="false">Call Us</string>
    <string name="location" translatable="false">Location</string>
    <string name="home" translatable="false">Home</string>
    <string name="aboutus" translatable="false">About US</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="categories" translatable="false">Categories</string>
    <string name="title_activity_maps">Map</string>
</resources>
