<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pizza1">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="518dp"
        android:layout_height="769dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1" />

    <TextView
        android:id="@+id/pizza1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pizza"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="373dp"
        android:layout_height="460dp"
        android:layout_marginTop="64dp"
        android:background="#B5ECECEC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/pizza1">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="347dp"
            android:layout_height="185dp"
            android:translationX="10sp"
            android:translationY="10sp"
            app:srcCompat="@drawable/p1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="#0A0101"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationX="30sp"
            android:translationY="210sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="#090101"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationX="30sp"
            android:translationY="250sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4103A9F4"
            android:text="@string/reservation"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationX="20dp"
            android:translationY="400dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:background="#4103A9F4"
            android:text="@string/exit"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:translationX="240dp"
            android:translationY="400dp" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>