<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="518dp"
        android:layout_height="769dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1" />

    <TextView
        android:id="@+id/seafood1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/seafood"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="373dp"
        android:layout_height="460dp"
        android:layout_marginTop="28dp"
        android:background="#B5ECECEC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seafood1">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4103A9F4"
            android:text="@string/reservation"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationX="20dp"
            android:translationY="400dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:background="#4103A9F4"
            android:text="@string/exit"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:translationX="240dp"
            android:translationY="400dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/price"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationX="20dp"
            android:translationY="230dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/number"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationX="20dp"
            android:translationY="290dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="342dp"
            android:layout_height="202dp"
            android:translationX="15dp"
            android:translationY="20dp"
            app:srcCompat="@drawable/s1" />

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>