<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="518dp"
        android:layout_height="769dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/contactus"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/openhours"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#B0FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/op">

        <TextView
            android:id="@+id/mo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textColor="#CD000000" />

        <TextView
            android:id="@+id/am"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="09:00am-05:00pm"
            android:textColor="#CD000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#B0FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textColor="#CD000000" />

        <TextView
            android:id="@+id/am1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="09:00am-01:00pm/05:00pm-09:00pm"
            android:textColor="#CD000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#B0FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/we"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:textColor="#CD000000" />

        <TextView
            android:id="@+id/am2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="09:00am-05:00pm"
            android:textColor="#CD000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#B0FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/th"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:textColor="#CD000000" />

        <TextView
            android:id="@+id/am3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="09:00am-05:00pm"
            android:textColor="#CD000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#B0FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textColor="#CD000000" />

        <TextView
            android:id="@+id/am4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="09:00am-05:00pm"
            android:textColor="#CD000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/getintouch"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="11dp"
        android:background="#B0FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <TextView
            android:id="@+id/ca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/callus"
            android:textColor="#CD000000"
            android:translationX="50dp"
            android:translationY="15dp" />

        <ImageView
            android:id="@+id/c"
            android:layout_width="36dp"
            android:layout_height="26dp"
            android:translationY="-5dp"
            app:srcCompat="@drawable/c" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#B0FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/sue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="sendusemail"
            android:textColor="#CD000000"
            android:translationX="50dp"
            android:translationY="15dp" />

        <ImageView
            android:id="@+id/m"
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:translationY="-10dp"
            app:srcCompat="@drawable/m" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>